--- a/css/style.css
+++ b/css/style.css
@@ -9,5 +9,30 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 .grid-container{
+    padding: 10px;
     background-color: brown;
+    display: grid;
+    /* grid-template-columns:150px 200px 400px; */
+    grid-template-columns: 1fr 1fr 1fr 1fr ;
+    grid-template-rows: 150px 300px;
+    /* gap: 10px; */
+    column-gap: 10px;
+    row-gap: 10px;
+}
+
+.box-1{
+    /* grid-row: 2/3; */
+    /* grid-column: 1/4; */
+    
+    grid-area:  2 / 1 / 3 / 4 ;
+}
+.box-4{
+    grid-row: 2/4 ;
+    background-color: rgb(25, 0, 255)  ;
+    grid-row: 2/4;
+}
+.box-grid{
+    padding: 1.5rem;
+    border: 2px solid black ;
+    background-color: rgb(194, 190, 190);
 }
